# article-reader

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  concat.rs  config.rs  lib.rs  main.rs  preprocess.rs  splitter.rs  tts.rs  ui.rs
src/parser/: html.rs  markdown.rs  mod.rs  text.rs
test_samples/: alex.md  article.html  long_article.md  mixed.md  simple.txt
tests/: integration.rs
